--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "botmini",
   "version": "1.0.0",
-  "description": "Simple Discord bot for Render hosting",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,5 +8,8 @@
   "dependencies": {
     "discord.js": "^14.15.3",
     "express": "^4.18.2"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
